# oficina_backend_python

./: .pylintrc  README.md  pyproject.toml
ex00_review/: classes.py  conjuntos.py  dicionarios.py  listas.py  tuplas.py
ex01_fastapi/: main.py  pyproject.toml
ex01_flask/: app.py  pyproject.toml
ex02_fastapi/: main.py  pyproject.toml
ex02_flask/: .env  app.py  pyproject.toml
ex03_fastapi/: main.py  pyproject.toml
ex03_flask/: app.py  pyproject.toml
ex04_fastapi/: main.py  pyproject.toml
ex04_flask/: app.py  pyproject.toml
ex05_fastapi/: main.py  pyproject.toml
ex05_flask/: README.md  app.py  pyproject.toml
ex06_fastapi/: README.md  main.py  pyproject.toml
ex06_fastapi/templates/: index.html
ex06_flask/: README.md  app.py  pyproject.toml
ex06_flask/templates/: index.html
ex07_fastapi/: README.md  main.py  pyproject.toml
ex07_fastapi/templates/: index.html
ex07_flask/: app.py  pyproject.toml
ex07_flask/templates/: index.html
ex08_fastapi/: main.py  pyproject.toml
ex08_flask/: README.md  app.py  pyproject.toml
ex09_fastapi/: README.md  main.py  pyproject.toml
ex09_flask/: README.md  app.py  pyproject.toml
ex10_fastapi/: README.md  main.py  pyproject.toml
ex10_flask/: README.md  app.py  pyproject.toml
ex11_fastapi/: main.py  pyproject.toml
ex11_flask/: app.py  pyproject.toml
ex12_fastapi/: README.md  main.py  pyproject.toml
ex12_flask/: app.py  pyproject.toml
ex13_fastapi/: main.py  pyproject.toml
ex13_flask/: app.py  pyproject.toml
ex14_fastapi/: main.py  pyproject.toml
ex14_fastapi/routers/: auth_router.py
ex15_fastapi/: README.md  main.py  pyproject.toml
ex15_fastapi/routers/: index_router.py
ex15_flask/: app.py  pyproject.toml
ex15_flask/routers/: index_router.py
ex16_fastapi/: main.py  main_test.py  pyproject.toml
ex16_flask/: README.md  app.py  app_test.py  pyproject.toml
ex17_fastapi/: Dockerfile  README.md  main.py  pyproject.toml
ex17_fastapi/routers/: index_router.py
ex17_flask/: Dockerfile  README.md  app.py  pyproject.toml
ex17_flask/routers/: index_router.py
ex18_flask/: Dockerfile  README.md  app.py  pyproject.toml
ex18_flask/resources/: __init__.py  item.py  thing.py
ex19_flask/: .gitignore  Dockerfile  README.md  app.py  constants.py  db.py  pyproject.toml  security.py  variables.py
ex19_flask/libs/: ouath2_creds_jairomarques.json  yagmail_sender.py
ex19_flask/resources/: __init__.py  usuario.py
ex19_flask/schemas/: usuario.py
ex19_flask/services/: usuario.py
ex19_flask/sql/: QUERY_usuarios_insert.sql
ex20_flask/: README.md  app.py  db.py  error_handler.py  pyproject.toml  security.py  variables.py
ex20_flask/libs/: oauth2_creds_doctorstrange.json
ex20_flask/models/: autodate.py  temperatura.py  usuario.py
ex20_flask/resources/: __init__.py  temperatura.py  usuario.py
ex20_flask/schemas/: temperatura.py
ex20_flask/services/: temperatura.py
