[tool.poetry]
name = "oficina_backend_flask_fastapi"
version = "0.1.0"
description = ""
authors = ["malki-cedheq <malkicedheq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "*"
uvicorn = "*"
pydantic = "*"
jinja2 = "*"
python-dotenv = "*"
fastapi = "*"
asyncio = "*"
flask = {extras = ["async"], version = "^2.2.2"}
flask-cors = "*"
flask_pydantic  = "*"
flask_injector  = "*"
pytest = "*"
httpx = "*"
flask-restx = "*"
flask-sqlalchemy = "3.0.3"
psycopg2-binary = "2.9.5"
flask-marshmallow = "0.14.0"
marshmallow-sqlalchemy = "0.28.1"
flask-migrate = "4.0.4"
yagmail = "0.15.293"
Flask-Login = "0.6.2"
pymongo = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
