[tool.poetry]
name = "ex05_fastapi"
version = "0.1.0"
description = ""
authors = ["malki-cedheq <malkicedheq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "*"
uvicorn = "*"
fastapi = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
