[tool.poetry]
name = "ex08_flask"
version = "0.1.0"
description = ""
authors = ["malki-cedheq <malkicedheq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask[async] = "*"
asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
