[tool.poetry]
name = "ex10_flask"
version = "0.1.0"
description = ""
authors = ["malki-cedheq <malkicedheq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
pydantic = "*"
flask_pydantic  = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
